cmake_minimum_required(VERSION 3.6.2)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
set(CMAKE_BUILD_TYPE Debug)
project(lab1)
add_executable(lab1_part1 ${CMAKE_CURRENT_SOURCE_DIR}/lab1_part1.cpp)
add_executable(lab1_part2 ${CMAKE_CURRENT_SOURCE_DIR}/lab1_part2.cpp)
add_executable(lab1_part3 ${CMAKE_CURRENT_SOURCE_DIR}/lab1_part3.cpp)
add_executable(lab1_part4 ${CMAKE_CURRENT_SOURCE_DIR}/lab1_part4.cpp)
add_executable(lab1_part5 ${CMAKE_CURRENT_SOURCE_DIR}/lab1_part5.cpp)